# CloudyContacts

./: .env.example  .gitignore  README.md  docker-compose.yaml  docker-compose.yml  project_map.txt  pyproject.toml  requirements.txt
CloudyContacts/: .env.example  manage.py  settings.py  urls.py  wsgi.py
CloudyContacts/CloudyContacts/: asgi.py  settings.py  urls.py
CloudyContacts/postgres-data/global/: 1260  2671  pg_control  pg_internal.init
CloudyContacts/postgres-data/pg_stat/: pgstat.stat
app_contacts/: apps.py  forms.py  models.py  urls.py  views.py
app_contacts/migrations/: 0001_initial.py
app_contacts/templates/app_contacts/: add_contact.html  calendar.html  contact_birthday.html  contact_details.html  contact_update.html  (+1 more)
app_download/: apps.py  urls.py  views.py
app_files/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app_files/migrations/: 0001_initial.py  0002_alter_userfile_file_type.py  0003_alter_userfile_filepath.py
app_main/: apps.py  urls.py  views.py
app_news/: apps.py  urls.py  views.py
app_notes/: apps.py  forms.py  models.py  urls.py  views.py
app_notes/migrations/: 0001_initial.py
app_notes/templatetags/: extract_tags.py
app_sort/: apps.py  urls.py  views.py
postgres-data/: postmaster.pid
postgres-data/global/: 1260  1262  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
staticfiles/: staticfiles.json
users/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py
(+165 files in other folders)
